--- a/client/src/app/modules/policy-tracker/components/policy-tracker-component/policy-tracker.component.html
+++ b/client/src/app/modules/policy-tracker/components/policy-tracker-component/policy-tracker.component.html
@@ -12,43 +12,7 @@
       </div>
       <mat-tab-group>
         <mat-tab label="Policy Information">
-          <div class="tab-container">
-            <h1>Insurance</h1>
-            <div class="row">
-              <div class="col-sm-2 font-weight-lighter">
-                <h3>Life Coverage</h3>
-              </div>
-              <div class="col-sm-4">
-                <h2 class="font-weight-bold">{{policy.policyInfo.life_coverage | currency:'PHP'}}</h2>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-2 font-weight-lighter">
-                <h3>Amount Due as of Last Statement
-                  Dated {{policy.policyInfo.last_statement_date | date: 'mediumDate'}}</h3>
-              </div>
-              <div class="col-sm-4">
-                <h3
-                  class="font-weight-bold">{{policy.policyInfo.last_statement_amount | currency:'PHP'}}</h3>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-2 font-weight-lighter">
-                <h3>Payment Due Date</h3>
-              </div>
-              <div class="col-sm-4 font-weight-lighter">
-                <p>{{policy.policyInfo.payment_due_date}}</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-2 font-weight-lighter">
-                <h3>Policy Status</h3>
-              </div>
-              <div class="col-sm-4 font-weight-lighter">
-                <p>{{policy.policyInfo.policy_status}}</p>
-              </div>
-            </div>
-          </div>
+          <app-policy-information [policyInfoData]="policy.policyInfo"></app-policy-information>
         </mat-tab>
         <mat-tab label="Payment History">Payment History</mat-tab>
       </mat-tab-group>
