--- a/client/src/app/modules/policy-tracker/components/policy-information/policy-information.component.html
+++ b/client/src/app/modules/policy-tracker/components/policy-information/policy-information.component.html
@@ -1,26 +1,26 @@
 <div class="tab-container">
   <h1>Insurance</h1>
   <p>
-    <span class="font-italic">{{policyInfoData.insured_person}}</span> is covered from
-    <span class="font-weight-bold">{{policyInfoData.coverage_start_date | date: 'mediumDate'}}</span> until
-    <span class="font-weight-bold">{{policyInfoData.coverage_end_date | date: 'mediumDate'}}</span>
+    <span class="font-italic">{{policyInfoData.insuredPerson}}</span> is covered from
+    <span class="font-weight-bold">{{policyInfoData.coverageStartDate | date: 'mediumDate'}}</span> until
+    <span class="font-weight-bold">{{policyInfoData.coverageEndDate | date: 'mediumDate'}}</span>
   </p>
   <div class="row">
     <div class="col-sm-2 font-weight-lighter">
       <h3>Life Coverage</h3>
     </div>
     <div class="col-sm-4">
-      <h2 class="font-weight-bold">{{policyInfoData.life_coverage | currency:'PHP'}}</h2>
+      <h2 class="font-weight-bold">{{policyInfoData.lifeCoverage | currency:'PHP'}}</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-2 font-weight-lighter">
       <h3>Amount Due as of Last Statement
-        Dated {{policyInfoData.last_statement_date | date: 'mediumDate'}}</h3>
+        Dated {{policyInfoData.lastStatementDate | date: 'mediumDate'}}</h3>
     </div>
     <div class="col-sm-4">
       <h3
-        class="font-weight-bold">{{policyInfoData.last_statement_amount | currency:'PHP'}}</h3>
+        class="font-weight-bold">{{policyInfoData.lastStatementAmount | currency:'PHP'}}</h3>
     </div>
   </div>
   <div class="row">
@@ -28,7 +28,7 @@
       <h3>Payment Due Date</h3>
     </div>
     <div class="col-sm-4 font-weight-lighter">
-      <p>{{policyInfoData.payment_due_date}}</p>
+      <p>{{policyInfoData.paymentDueDate}}</p>
     </div>
   </div>
   <div class="row">
@@ -36,7 +36,7 @@
       <h3>Policy Status</h3>
     </div>
     <div class="col-sm-4 font-weight-lighter">
-      <p>{{policyInfoData.policy_status}}</p>
+      <p>{{policyInfoData.policyStatus}}</p>
     </div>
   </div>
 </div>
