[Syam][Client] Initial Design for Payment History
1. Create initial table design for payment history
2. Add dummy progress bar indicator

--- a/client/src/app/modules/policy-tracker/components/policy-tracker-component/policy-tracker.component.html
+++ b/client/src/app/modules/policy-tracker/components/policy-tracker-component/policy-tracker.component.html
@@ -31,7 +31,7 @@
           <app-policy-information [policyInfoData]="policy.policyInfo"></app-policy-information>
         </mat-tab>
         <mat-tab label="Payment History">
-          <app-payment-history [paymentHistoryData]></app-payment-history>
+          <app-payment-history [paymentHistoryData]="policy.paymentHistory"></app-payment-history>
         </mat-tab>
       </mat-tab-group>
     </mat-card-content>
