--- a/client/src/app/modules/policy-tracker/components/payment-history/payment-history.component.html
+++ b/client/src/app/modules/policy-tracker/components/payment-history/payment-history.component.html
@@ -1,1 +1,25 @@
-<p>payment-history works!</p>
+<div>
+  <div class="progress-container">
+    <span class="font-weight-bold"> 2 out of 15 years</span> has been paid
+    <mat-progress-bar mode="determinate" value="15"></mat-progress-bar>
+  </div>
+  <table mat-table [dataSource]="paymentHistoryData">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="paymentDate">
+      <th mat-header-cell *matHeaderCellDef> Payment Date </th>
+      <td mat-cell *matCellDef="let element">{{element.paymentDate | date: 'mediumDate'}}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="paymentAmount">
+      <th mat-header-cell *matHeaderCellDef> Payment Amount </th>
+      <td mat-cell *matCellDef="let element">{{element.paymentAmount}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
