--- a/client/src/app/modules/policy-tracker/components/payment-history/payment-history.component.html
+++ b/client/src/app/modules/policy-tracker/components/payment-history/payment-history.component.html
@@ -1,9 +1,9 @@
-<div>
+<mat-dialog-content class="mat-typography">
   <div class="progress-container">
     <span class="font-weight-bold"> 2 out of 15 years</span> has been paid
     <mat-progress-bar mode="determinate" value="15"></mat-progress-bar>
   </div>
-  <table mat-table [dataSource]="paymentHistoryData">
+  <table mat-table [dataSource]="dataSource">
 
     <!-- Position Column -->
     <ng-container matColumnDef="paymentDate">
@@ -14,7 +14,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="paymentAmount">
       <th mat-header-cell *matHeaderCellDef> Payment Amount </th>
-      <td mat-cell *matCellDef="let element">{{element.paymentAmount}}</td>
+      <td mat-cell *matCellDef="let element">{{element.paymentAmount | currency: 'PHP'}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -22,4 +22,7 @@
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</div>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close color="warn">Close</button>
+</mat-dialog-actions>
