--- a/client/src/app/modules/policy-tracker/components/payment-history/payment-history.component.html
+++ b/client/src/app/modules/policy-tracker/components/payment-history/payment-history.component.html
@@ -1,19 +1,19 @@
 <mat-dialog-content class="mat-typography">
   <div class="progress-container">
-    <span class="font-weight-bold"> 2 out of 15 years</span> has been paid
-    <mat-progress-bar mode="determinate" value="15"></mat-progress-bar>
+    <span class="font-weight-bold"> {{yearsPaid}} out of {{yearsToPay}} years</span> has been paid
+    <mat-progress-bar mode="determinate" [value]="paymentProgress"></mat-progress-bar>
   </div>
-  <table mat-table [dataSource]="dataSource">
+  <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- Position Column -->
     <ng-container matColumnDef="paymentDate">
-      <th mat-header-cell *matHeaderCellDef> Payment Date </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Payment Date </th>
       <td mat-cell *matCellDef="let element">{{element.paymentDate | date: 'mediumDate'}}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="paymentAmount">
-      <th mat-header-cell *matHeaderCellDef> Payment Amount </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Payment Amount </th>
       <td mat-cell *matCellDef="let element">{{element.paymentAmount | currency: 'PHP'}}</td>
     </ng-container>
 
