--- a/client/src/app/shared/layout/header/header.component.html
+++ b/client/src/app/shared/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="header">
   <button mat-flat-button color="primary" [routerLink]='""'>Policy Information</button>
-  <button mat-flat-button color="primary" [routerLink]='"."'>Reports</button>
+  <button mat-flat-button color="primary" [routerLink]='"/reports"'>Reports</button>
   <button mat-flat-button color="primary" [routerLink]='"."'>Generate Random Data</button>
 </mat-toolbar>
