--- a/client/src/app/modules/policy-tracker/components/payment-history/payment-history.component.html
+++ b/client/src/app/modules/policy-tracker/components/payment-history/payment-history.component.html
@@ -5,13 +5,13 @@
   </div>
   <table mat-table [dataSource]="dataSource" matSort>
 
-    <!-- Position Column -->
+    <!-- Payment Date Column -->
     <ng-container matColumnDef="paymentDate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Payment Date </th>
       <td mat-cell *matCellDef="let element">{{element.paymentDate | date: 'mediumDate'}}</td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Payment Amount Column -->
     <ng-container matColumnDef="paymentAmount">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Payment Amount </th>
       <td mat-cell *matCellDef="let element">{{element.paymentAmount | currency: 'PHP'}}</td>
