--- a/client/src/app/modules/policy-tracker/components/policy-information/policy-information.component.html
+++ b/client/src/app/modules/policy-tracker/components/policy-information/policy-information.component.html
@@ -1,42 +1,47 @@
-<div class="tab-container">
-  <h1>Insurance</h1>
-  <p>
-    <span class="font-italic">{{policyInfoData.insuredPerson}}</span> is covered from
-    <span class="font-weight-bold">{{policyInfoData.coverageStartDate | date: 'mediumDate'}}</span> until
-    <span class="font-weight-bold">{{policyInfoData.coverageEndDate | date: 'mediumDate'}}</span>
-  </p>
-  <div class="row">
-    <div class="col-sm-2 font-weight-lighter">
-      <h3>Life Coverage</h3>
+<mat-dialog-content>
+  <div class="tab-container">
+    <h1>Policy Details</h1>
+    <p>
+      <span class="font-italic">{{policyInfoData.insuredPerson}}</span> is covered from
+      <span class="font-weight-bold">{{policyInfoData.coverageStartDate | date: 'mediumDate'}}</span> until
+      <span class="font-weight-bold">{{policyInfoData.coverageEndDate | date: 'mediumDate'}}</span>
+    </p>
+    <div class="row">
+      <div class="col-sm-4 font-weight-lighter">
+        <h3>Life Coverage</h3>
+      </div>
+      <div class="col-sm-6">
+        <h2 class="font-weight-bold">{{policyInfoData.lifeCoverage | currency:'PHP'}}</h2>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <h2 class="font-weight-bold">{{policyInfoData.lifeCoverage | currency:'PHP'}}</h2>
+    <div class="row">
+      <div class="col-sm-4 font-weight-lighter">
+        <h3>Amount Due as of Last Statement
+          Dated {{policyInfoData.lastStatementDate | date: 'mediumDate'}}</h3>
+      </div>
+      <div class="col-sm-6">
+        <h3
+          class="font-weight-bold">{{policyInfoData.lastStatementAmount | currency:'PHP'}}</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 font-weight-lighter">
+        <h3>Payment Due Date</h3>
+      </div>
+      <div class="col-sm-6 font-weight-lighter">
+        <p>{{policyInfoData.paymentDueDate | date: 'mediumDate'}}</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 font-weight-lighter">
+        <h3>Policy Status</h3>
+      </div>
+      <div class="col-sm-6 font-weight-lighter">
+        <p>{{policyInfoData.policyStatus}}</p>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-sm-2 font-weight-lighter">
-      <h3>Amount Due as of Last Statement
-        Dated {{policyInfoData.lastStatementDate | date: 'mediumDate'}}</h3>
-    </div>
-    <div class="col-sm-4">
-      <h3
-        class="font-weight-bold">{{policyInfoData.lastStatementAmount | currency:'PHP'}}</h3>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-2 font-weight-lighter">
-      <h3>Payment Due Date</h3>
-    </div>
-    <div class="col-sm-4 font-weight-lighter">
-      <p>{{policyInfoData.paymentDueDate}}</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-2 font-weight-lighter">
-      <h3>Policy Status</h3>
-    </div>
-    <div class="col-sm-4 font-weight-lighter">
-      <p>{{policyInfoData.policyStatus}}</p>
-    </div>
-  </div>
-</div>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close color="warn">Close</button>
+</mat-dialog-actions>
