[Syam][Client and Server] Add Bar Graph
1. Add sass styles for reports
2. Cleanup policy info service

--- a/client/src/app/modules/policy-reports/components/premium-report/premium-report.component.html
+++ b/client/src/app/modules/policy-reports/components/premium-report/premium-report.component.html
@@ -1,4 +1,4 @@
-<h3>Paid vs Unpaid Premiums</h3>
+<h3 class="header-report">Paid vs Unpaid Premiums</h3>
 
 <div class="bar-graph-container">
   <canvas baseChart
