--- a/client/src/app/modules/policy-reports/components/premium-report/premium-report.component.sass
+++ b/client/src/app/modules/policy-reports/components/premium-report/premium-report.component.sass
@@ -1,3 +1,8 @@
+.header-report
+  margin: 20px 0 0 40px
+
 .bar-graph-container
   display: block
   width: 60%
+  margin-left: auto
+  margin-right: auto
