--- a/client/src/app/modules/policy-reports/components/premium-report/premium-report.component.sass
+++ b/client/src/app/modules/policy-reports/components/premium-report/premium-report.component.sass
@@ -1,7 +1,7 @@
 .header-report
-  margin: 20px 0 0 40px
+  margin: 30px 0 0 40px
 
-.bar-graph-container
+.graph-container
   display: block
   width: 60%
   margin-left: auto
